// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly - logged in 1`] = `
<WithStyles(ForwardRef(List))>
  <WithStyles(ForwardRef(ListItem))
    button={true}
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(DashboardIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Dashboard"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    button={true}
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/logout"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(LockOpenIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Logout"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(Divider)) />
  <WithStyles(ForwardRef(ListSubheader))
    inset={true}
  >
    Reports
  </WithStyles(ForwardRef(ListSubheader))>
  <WithStyles(ForwardRef(ListItem))
    button={true}
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/cigarettes"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(SmokingRoomsIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Cigarettes"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    button={true}
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/weight"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(FitnessCenterIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Weight"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    button={true}
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/stairs"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(DirectionsRunIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Stairs"
    />
  </WithStyles(ForwardRef(ListItem))>
</WithStyles(ForwardRef(List))>
`;

exports[`renders correctly - logged out 1`] = `
<WithStyles(ForwardRef(List))>
  <WithStyles(ForwardRef(ListItem))
    button={true}
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(DashboardIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Dashboard"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    button={true}
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/login"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(LockIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Login"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(Divider)) />
  <WithStyles(ForwardRef(ListSubheader))
    inset={true}
  >
    Reports
  </WithStyles(ForwardRef(ListSubheader))>
  <WithStyles(ForwardRef(ListItem))
    button={true}
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/cigarettes"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(SmokingRoomsIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Cigarettes"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    button={true}
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/weight"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(FitnessCenterIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Weight"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    button={true}
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/stairs"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(DirectionsRunIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Stairs"
    />
  </WithStyles(ForwardRef(ListItem))>
</WithStyles(ForwardRef(List))>
`;
